tests/create/attribute_id_multiple/test.stderr
error: Only one field can be annotated with `#[crud_id]`
 --> tests/create/attribute_id_multiple/test.rs:8:5
  |
8 | /     #[crud_id]
9 | |     name: String,
  | |________________^

error[E0599]: no function or associated item named `create` found for struct `Test` in the current scope
  --> tests/create/attribute_id_multiple/test.rs:17:19
   |
5  | struct Test {
   | ----------- function or associated item `create` not found for this struct
...
17 |     let _ = Test::create(&pool, "Debbie".to_string()).await;
   |                   ^^^^^^ function or associated item not found in `Test`
